--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -4,10 +4,11 @@ x-base: &base
   image: mousehunt
   build: .
   shm_size: "3gb"
+  devices:
+    - /dev/snd
   environment:
     DISPLAY: "unix${DISPLAY}"
-    PULSE_SERVER: unix:/tmp/pulseaudio.socket
-    PULSE_COOKIE: /tmp/pulseaudio.cookie
+    PULSE_SERVER: unix:${XDG_RUNTIME_DIR}/pulse/native
     UID: 1000
     GID: 1000
 
